Acceptance of @chainlink/test-helpers

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@chainlink/test-helpers": "0.0.1-beta",
     "chainlink": "0.7.5",
     "link_token": "^1.0.6",
     "openzeppelin-solidity": "^1.12.0"
